--- a/style.css
+++ b/style.css
@@ -3,9 +3,78 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  background-color: #F7F7F7;
+}
+#main{
+  margin: 1rem 0 0 6.5rem;
+}
+#main h3{
+  margin: 0.8rem;
+}
 #form{
   display: none;
+  margin: 2rem 0 0 4.5rem;
 }
 .input{
   display: block;
+  margin: 0.8rem;
+  font-size: 1rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.5rem 0 0.5rem 1rem;
+  width: 70%;
+}
+#form h2, label{
+  margin-left: 1rem;
+}
+label {
+  font-size: 1.2rem;
+}
+.checkbox{
+  margin: 0.8rem;
+}
+#submit{
+  font-size: 1.5rem;
+  width: 70%;
+  border: 2px solid black;
+  border-radius: 5px;
+  margin: 0.8rem;
+  padding: 0.2rem;
+  background-color: black;
+  color: white;
+}
+#submit:hover{
+  background-color: gray;
+  color: white;
+}
+.bookDiv{
+  background-color: white;
+  margin: 1rem 0 0 3.5rem;
+  width: 70%;
+  font-size: 1.2rem;
+  border-radius: 10px;
+  padding: 1rem 0 1rem 0;
+  text-align: center;
+}
+button {
+  display: block;
+  font-size: 1rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 1rem 0 0 3.5rem;
+  padding: 0.3rem;
+  width: 50%;
+  background-color: black;
+  color: white;
+}
+button:hover{
+  background-color: lightgray;
+  color: black;
+  border: 1px solid lightgray;
+}
+.remove{
+  background-color: lightgray;
+  color: black;
+  border: 1px solid lightgray;
 }
