--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body{
-  background-color: #F7F7F7;
+body {
+  background-color: #f7f7f7;
 }
-#main{
+#main {
   margin: 1rem 0 0 6.5rem;
 }
-#main h3{
+#main h3 {
   margin: 0.8rem;
 }
-#form{
+#form {
   display: none;
   margin: 2rem 0 0 4.5rem;
 }
-.input{
+.input {
   display: block;
   margin: 0.8rem;
   font-size: 1rem;
@@ -25,30 +25,32 @@ body{
   padding: 0.5rem 0 0.5rem 1rem;
   width: 70%;
 }
-#form h2, label{
+#form h2,
+label {
   margin-left: 1rem;
 }
 label {
   font-size: 1.2rem;
 }
-.checkbox{
+.checkbox {
   margin: 0.8rem;
 }
-#submit{
+#submit {
   font-size: 1.5rem;
   width: 70%;
-  border: 2px solid black;
+  border: none;
   border-radius: 5px;
   margin: 0.8rem;
   padding: 0.2rem;
   background-color: black;
   color: white;
+  cursor: pointer;
 }
-#submit:hover{
+#submit:hover {
   background-color: gray;
   color: white;
 }
-.bookDiv{
+.bookDiv {
   background-color: white;
   margin: 1rem 0 0 3.5rem;
   width: 70%;
@@ -68,13 +70,47 @@ button {
   background-color: black;
   color: white;
 }
-button:hover{
+button:hover {
   background-color: lightgray;
   color: black;
   border: 1px solid lightgray;
 }
-.remove{
+.remove {
   background-color: lightgray;
   color: black;
   border: 1px solid lightgray;
+}
+@media (min-width: 768px) {
+  #main {
+    margin: 2rem 0 0 42%;
+    font-size: 1.6rem;
+  }
+  #main h3 {
+    cursor: pointer;
+  }
+  #form {
+    font-size: 1.5rem;
+    margin: 2rem 0 0 40%;
+  }
+  #form h2 {
+    margin: 0;
+  }
+  .input {
+    width: 100%;
+    margin-top: 1rem;
+  }
+  #submit {
+    width: 100%;
+  }
+
+  .bookDiv {
+    font-size: 1.6rem;
+    margin: 1rem 1rem 1rem 30%;
+    width: 30%;
+  }
+  button {
+    margin: 0.5rem 0 0 10rem;
+    width: 30%;
+    cursor: pointer;
+  }
 }
